"Updated HTML and CSS code in various pages, including about.html, index.html, and social.html, with changes to layout, styling, and content."

--- a/about.html
+++ b/about.html
@@ -251,7 +251,9 @@
           <div class="align-items-start">
             <!-- Text Title -->
             <div class="col-lg-12" data-aos="fade-down" data-aos-duration="500">
-              <h2 class="section-title text-center">About Us</h2>
+              <h2 class="section-title text-center">Unveiling Nature's Essence</h2>
+              <h3 class="section-sub-title text-center"><span class="">Our Journey</span></h3>
+              
             </div>
 
             <!-- About Us Content -->
