--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <div class="row align-items-start">
             <!-- Text Title -->
             <div class="col-lg-12" data-aos="fade-down" data-aos-duration="500">
-              <h2 class="section-title text-center">About Us</h2>
+              <h2 class="section-title text-center">Our Journey</h2>
             </div>
             
             <!-- Youtube Video -->
@@ -298,10 +298,10 @@
             <!-- About Us Content -->
             <div class="col-lg-6">
               <p data-aos="fade-left" data-aos-duration="1000" class="about-title">
-                CV Java Agro Mandiri (JAVARI) is an Indonesian company that produces organic coconut sugar. We are committed to providing pure, natural, and healthy coconut sugar products. Our products are made from the sap of coconut flowers, which is collected and processed using traditional methods.
+                CV Java Agro Mandiri (JAVARI) has vision to be a resilient and robust company to collaborate with communities to develop rural commodities which convern to sustainable environment.
               </p>
               <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
-                At JAVARI, we believe in the power of nature to provide us with the best ingredients for a healthy and sustainable lifestyle. We are dedicated to promoting organic farming practices and supporting local communities in Indonesia. Our products are certified organic and fair trade, ensuring that they are produced in an environmentally friendly and socially responsible manner. We are committed to providing our customers with the highest quality coconut sugar products that are good for their health and the planet.
+                Javari or Java Agro Mandiri are youth community that has concerns related to development and poverty in the rural area. In our point of view, rural areas have a big potency to be developed so that the rural communities will be more prosperous. To answer those challenges, we build a social entrepreneur called CV Java Agro Mandiri (JAVARI) which focus on developing commodities to strengthen and support the rural livelihood.
               </p>
               <a href="#" class="btn btn-find-out mt-3">Find Out More <i class="bi bi-arrow-bar-right"></i></a>
             </div>
