--- a/pages/cocoSugarMix/cinnamon.html
+++ b/pages/cocoSugarMix/cinnamon.html
@@ -235,7 +235,7 @@
       <!-- Section 2: Product Description with Image -->
       <section id="product-detail" class="product-detail d-flex align-items-center">
         <div class="container">
-          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+          <div class="row p-4 p-lg-5 align-items-start justify-content-center">
               <!-- Left Side: Product Description -->
               <div class="col-lg-6 img-box">
                 <img src="../../assets/img/products/cinnamon.jpg" alt="Natural Coconut Sugar Cinnamon" class="product-img">
