--- a/pages/derrivatives/dessicated.html
+++ b/pages/derrivatives/dessicated.html
@@ -236,7 +236,7 @@
       <!-- Section 2: Product Description with Image -->
       <section id="product-detail" class="product-detail d-flex align-items-center">
         <div class="container">
-          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+          <div class="row p-4 p-lg-5 align-items-start justify-content-center">
 
               <div class="col-lg-12">
                 <h2 class="product-title">Natural Dessicated Coconut</h2>
@@ -299,7 +299,7 @@
       <section id="product-features" class="container-fluid">
         <!-- Subsection 1: Varieties of Product -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 varieties-section justify-content-center">
+          <div class="row p-4 p-lg-5 varieties-section justify-content-center">
             <h2 data-aos="fade-up" class="features-title">Varieties of Product: <span>Low Fat Dessicated Coconut (LFDC)</span></h2>
             <div class="col-md-6">
               <img src="../../assets/img/products/lfdc.jpeg" alt="Low Fat Dessicated Coconut LFDC" class="variety-img">
@@ -338,66 +338,9 @@
           </div>
         </div>
 
-        <!-- Subsection 2: Key Features -->
-        <div class="container">
-          <div class="row p-md-4 p-lg-5 fetures-section">
-            <h2 class="features-title" data-aos="fade-up">Key Features</h2>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-droplet-half"></i>
-              </div>
-              <h3>Reduced Fat Content</h3>
-              <p>LFDC contains around 10-15% fat compared to regular desiccated coconut, which can have up to 60% fat.</p>
-            </div>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-heart-pulse"></i>
-              </div>
-              <h3>Nutrient Retention</h3>
-              <p>Despite the lower fat content, LFDC retains many of the nutrients found in coconut, including dietary fiber, vitamins, and minerals.</p>
-            </div>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-emoji-smile"></i>
-              </div>
-              <h3>Delicious Flavor</h3>
-              <p>It still has the rich, nutty flavor of coconut, although it may be slightly less creamy due to the reduced fat..</p>
-            </div>
-          </div>
-        </div>
-
-          <!-- Subsection 3: Health Benefits
-          <div class="container">
-            <div class="row p-md-4 p-lg-5 health-benefits-section">
-              <h2 class="features-title" data-aos="fade-up">Health Benefits</h2>
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th>Nutrient</th>
-                    <th>Health Benefit</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr data-aos="fade-up">
-                    <td>Dietary Fiber</td>
-                    <td>Improves digestion and promotes gut health.</td>
-                  </tr>
-                  <tr data-aos="fade-up" data-aos-delay="200">
-                    <td>Vitamin</td>
-                    <td>Boosts Immune system function.</td>
-                  </tr>
-                  <tr data-aos="fade-up" data-aos-delay="400">
-                    <td>Iron</td>
-                    <td>Helps produce red blood cells.</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div> -->
-
         <!-- Subsection 4: Culinary Uses -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 culinary-uses-section">
+          <div class="row p-4 p-lg-5 culinary-uses-section">
             <h2 class="features-title text-center mb-4" data-aos="fade-up">Culinary Uses</h2>
             <div class="col-md-6 use-item" data-aos="fade-up">
               <img src="../../assets/img/products/lfdc.jpeg" alt="Baking Icons" class="use-img">
@@ -424,7 +367,7 @@
 
         <!-- Subsection 5: Storage -->
         <div class="container">
-          <div class="row storage-section p-md-4 p-lg-5 justify-content-center">
+          <div class="row storage-section p-4 p-lg-5 justify-content-center">
             <h2 class="features-title text-center" data-aos="fade-up">Storage Recomendations</h2>
             <div class="col-lg-12 storage-info" data-aos="fade-up">
               <i class="bi bi-box-seam storage-icon"></i>
@@ -441,7 +384,7 @@
       <section id="product-features-2" class="container-fluid">
         <!-- Subsection 1: Varieties of Product -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 varieties-section justify-content-center">
+          <div class="row p-4 p-lg-5 varieties-section justify-content-center">
             <h2 data-aos="fade-up" class="features-title">Varieties of Product: <span>High Fat Dessicated Coconut (HFDC)</span></h2>
             <div class="col-md-6">
               <img src="../../assets/img/products/hfdc.jpeg" alt="High Fat Dessicated Coconut HFDC" class="variety-img">
@@ -450,67 +393,13 @@
               <p>
                 HFDC, or **High-Fat Desiccated Coconut**, is a type of desiccated coconut that retains a higher fat content compared to standard desiccated coconut. High-Fat Desiccated Coconut is a flavorful and nutritious ingredient that can enhance a wide variety of dishes. Its rich taste and texture make it especially popular in both sweet and savory recipes, providing the delicious essence of coconut while delivering healthy fats and nutrients
               </p>
-
-              <!-- <div class="row p-2 mt-3 health-benefits-section">
-                <h2 class="section-sub-title" data-aos="fade-up">Health Benefits</h2>
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th>Nutrient</th>
-                      <th>Health Benefit</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr data-aos="fade-up">
-                      <td>Dietary Fiber</td>
-                      <td>Improves digestion and promotes gut health.</td>
-                    </tr>
-                    <tr data-aos="fade-up" data-aos-delay="200">
-                      <td>Vitamin</td>
-                      <td>Boosts Immune system function.</td>
-                    </tr>
-                    <tr data-aos="fade-up" data-aos-delay="400">
-                      <td>Iron</td>
-                      <td>Helps produce red blood cells.</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div> -->
-            </div>
-          </div>
-        </div>
-
-        <!-- Subsection 2: Key Features -->
-        <div class="container">
-          <div class="row p-md-4 p-lg-5 fetures-section">
-            <h2 class="features-title" data-aos="fade-up">Key Features</h2>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-droplet-half"></i>
-              </div>
-              <h3>Higher Fat Content</h3>
-              <p>HFDC typically contains around 30-60% fat, depending on the processing method. This is significantly higher than low-fat varieties.</p>
-            </div>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-egg"></i>
-              </div>
-              <h3>Rich Flavor and Texture</h3>
-              <p>The higher fat content provides a creamier texture and a more intense coconut flavor, making it very appealing in recipes.</p>
-            </div>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-emoji-smile"></i>
-              </div>
-              <h3>Natural Sweetness</h3>
-              <p>The fat content enhances the natural sweetness of coconut, often making it unnecessary to add additional sugars in certain recipes.</p>
             </div>
           </div>
         </div>
 
           <!-- Subsection 3: Health Benefits -->
           <div class="container">
-            <div class="row p-md-4 p-lg-5 health-benefits-section">
+            <div class="row p-4 p-lg-5 health-benefits-section">
               <h2 class="features-title" data-aos="fade-up">Nutritional Benefits</h2>
               <table class="table table-striped">
                 <thead>
@@ -539,7 +428,7 @@
 
         <!-- Subsection 4: Culinary Uses -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 culinary-uses-section">
+          <div class="row p-4 p-lg-5 culinary-uses-section">
             <h2 class="features-title text-center mb-4" data-aos="fade-up">Culinary Uses</h2>
             <div class="col-md-6 use-item" data-aos="fade-up">
               <img src="../../assets/img/products/hfdc.jpeg" alt="Baking Icons" class="use-img">
@@ -566,7 +455,7 @@
 
         <!-- Subsection 5: Storage -->
         <div class="container">
-          <div class="row storage-section p-md-4 p-lg-5 justify-content-center">
+          <div class="row storage-section p-4 p-lg-5 justify-content-center">
             <h2 class="features-title text-center" data-aos="fade-up">Storage Recomendations</h2>
             <div class="col-lg-12 storage-info" data-aos="fade-up">
               <i class="bi bi-box-seam storage-icon"></i>
