--- a/pages/singglePages/arenga.html
+++ b/pages/singglePages/arenga.html
@@ -237,7 +237,7 @@
       <!-- Section 2: Product Description with Image -->
       <section id="product-detail" class="product-detail d-flex align-items-center">
         <div class="container">
-          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+          <div class="row p-4 p-lg-5 align-items-start justify-content-center">
               <!-- Left Side: Product Description -->
               <div class="col-lg-6 img-box">
                 <img src="../../assets/img/products/arenga.jpg" alt="Natural Arenga Sugar" class="product-img">
@@ -258,7 +258,7 @@
 
         <!-- Subsection 1: Benefit -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+          <div class="row p-4 p-lg-5 fetures-section justify-content-center">
             <h2 class="features-title text-center" data-aos="fade-up">Benefit</h2>
             <div class="col-md-3 feature-item" data-aos="fade-up">
               <div class="features-benefit-icon">
