--- a/pages/singglePages/cocoPeat.html
+++ b/pages/singglePages/cocoPeat.html
@@ -237,7 +237,7 @@
       <!-- Section 2: Product Description with Image -->
       <section id="product-detail" class="product-detail d-flex align-items-center">
         <div class="container">
-          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+          <div class="row p-4 p-lg-5 align-items-start justify-content-center">
               <!-- Product Image -->
               <div class="col-lg-12 img-box-2">
                 <img src="../../assets/img/products/peat.jpg" alt="Coconut Peat" class="product-img-2">
@@ -288,7 +288,7 @@
 
         <!-- Subsection 1: Benefit -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+          <div class="row p-4 p-lg-5 fetures-section justify-content-center">
             <h2 class="features-title text-center" data-aos="fade-up">Benefit</h2>
 
             <div class="col-md-3 feature-item" data-aos="fade-up">
@@ -325,7 +325,7 @@
 
         <!-- Subsection 2: Uses -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 cp-uses-section">
+          <div class="row p-4 p-lg-5 cp-uses-section">
             <h2 class="features-title text-center mb-4" data-aos="fade-up">Coco Peat Uses</h2>
             <div class="col-md-6 use-item" data-aos="fade-up">
               <img src="../../assets/img/products/peat2.jpg" alt="Baking Icons" class="use-img">
@@ -352,7 +352,7 @@
 
         <!-- Subsection 3: Considerations -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+          <div class="row p-4 p-lg-5 fetures-section justify-content-center">
             <h2 class="features-title text-center" data-aos="fade-up">Considerations</h2>
 
             <div class="col-md-3 feature-item" data-aos="fade-up">
