--- a/social.html
+++ b/social.html
@@ -219,13 +219,111 @@
 
     <!-- Main Content -->
     <main class="main mt-5">
-      <section class="under-construction d-flex justify-content-center align-items-center">
-        <div class="text-center">
-          <img src="assets/img/underConstruction.png" alt="Under Construction" class="img-fluid mb-4">
-          <h1 class="display-4">This Page is Under Construction</h1>
-          <p class="lead">We are working hard to bring you the best experience. Please check back later.</p>
+      <section id="header-project-image" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="project-background-image"><img src="assets/img/background.jpg" alt="Social Events"></div>
+        <div class="card-img-overlay">
+          <div class="container">
+            <h1 class="project-header-title" data-aos="fade-up" data-aos-duration="1000">Welcome to <strong class="text-strong">Our Social Projects</strong></h1>
+            <p class="project-description" data-aos="fade-up" data-aos-duration="1500">Discover the latest activities and see how we are making an impact.</p>
+          </div>
         </div>
       </section>
+
+      <section class="social-project mt-5 mb-5">
+        <div class="container">
+
+          <div class="row align-items-start">
+            <!-- Text Title -->
+            <div class="col-lg-12" data-aos="fade-down" data-aos-duration="500">
+              <h3 class="section-title text-start">
+                <strong class="text-strong">Social Benefit Project (CSR)</strong>
+              </h3>
+            </div>
+
+            <!-- Youtube Video -->
+            <div data-aos="fade-right" data-aos-duration="1500" class="col-lg-6 mb-4 mb-lg-0">
+              <div class="video-container">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/AVCeDfhUHYE?si=H03tJs1n0n-mMriJ" title="Youtube Company Profile Javari" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+
+            <!-- Social Benefit Project (CSR) Content -->
+            <div class="col-lg-6">
+              <p data-aos="fade-left" data-aos-duration="1000" class="section-sub-title" style="color: #555;">
+                We are committed to making a positive impact on the communities where we operate. Our social benefit projects are designed to improve the quality of life for local residents and support sustainable development in the region.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
+
+      <!-- ICS -->
+      <section id="internal-control-system">
+        <div class="container">
+
+          <div class="row align-items-start">
+            <!-- Text Title -->
+            <div class="col-lg-12" data-aos="fade-down" data-aos-duration="500">
+              <h3 class="section-title text-start">
+                <strong class="text-strong">Community Activites Support</strong>
+              </h3>
+            </div>
+
+            <!-- Content -->
+            <div class="col-lg-12">
+              <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
+                We are committed to supporting community activities that promote health, education, and environmental sustainability. Our community activities support program is designed to help local residents improve their quality of life and protect the environment. We work with local organizations to identify the most pressing needs in the community and develop programs that address those needs. Our goal is to create a better future for the people who live in the communities where we operate.
+              </p>
+            </div>
+          </div>
+
+          <div id="masonry-grid" class="container-fluid mt-3">
+            <div class="grid-container">
+              <div class="grid-item landscape" id="img1">
+                <img src="assets/img/hero1.jpg" alt="ICS 1" class="img-fluid">
+              </div>
+              <div class="grid-item landscape" id="img2">
+                <img src="assets/img/hero3.jpg" alt="ICS 2" class="img-fluid">
+              </div>
+
+              <div class="grid-item potrait" id="img3">
+                <img src="assets/img/hero2.jpg" alt="ICS 3" class="img-fluid">
+              </div>
+
+              <div class="grid-item landscape" id="img4">
+                <img src="assets/img/hero1.jpg" alt="ICS 4" class="img-fluid">
+              </div>
+              <div class="grid-item landscape" id="img5">
+                <img src="assets/img/hero3.jpg" alt="ICS 5" class="img-fluid">
+              </div>
+              <div class="grid-item wide" id="img6">
+                <img src="assets/img/hero1.jpg" alt="ICS 6" class="img-fluid">
+              </div>
+
+              <div class="grid-item potrait" id="img7">
+                <img src="assets/img/hero2.jpg" alt="ICS 7" class="img-fluid">
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-12 py-4">
+            <h3 class="section-title text-start">
+              <strong class="text-strong" style="font-size: 1.6rem;">Revolving Funds to Improve Farmers Production Facility</strong>
+            </h3>
+
+            <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
+              We provide revolving funds to help farmers improve their production facilities and increase their productivity. Our revolving funds are designed to provide farmers with the financial support they need to invest in new equipment, technology, and training. By providing farmers with access to capital, we help them increase their income and improve their quality of life. Our goal is to create a sustainable and profitable agricultural sector that benefits both farmers and the environment.
+            </p>
+            <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
+              We work with local farmers to identify the most pressing needs in their communities and develop programs that address those needs. Our revolving funds are designed to be flexible and responsive to the needs of farmers, so they can use the funds in the way that will have the greatest impact on their productivity and income. We also provide training and technical assistance to help farmers make the most of their investment and improve their production practices.
+            </p>
+          </div>
+        </div>
+
+      </section>
+      <!-- End ICS -->
 
     </main>
     <!-- End Main Content -->
