--- a/pages/charcoal/wood.html
+++ b/pages/charcoal/wood.html
@@ -237,7 +237,7 @@
       <!-- Section 2: Product Description with Image -->
       <section id="product-detail" class="product-detail d-flex align-items-center">
         <div class="container">
-          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+          <div class="row p-4 p-lg-5 align-items-start justify-content-center">
               <!-- Product Image -->
               <div class="col-lg-12 img-box-2">
                 <img src="../../assets/img/products/wood-charcoal.jpg" alt="Wood Charcoal" class="product-img-2">
@@ -269,7 +269,7 @@
 
         <!-- Subsection 1: Key Benefit -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+          <div class="row p-4 p-lg-5 fetures-section justify-content-center">
             <h2 class="features-title text-center" data-aos="fade-up">Key Benefits</h2>
 
             <div class="col-lg-12 img-box-2">
