--- a/pages/derrivatives/cocoFlakes.html
+++ b/pages/derrivatives/cocoFlakes.html
@@ -237,7 +237,7 @@
       <!-- Section 2: Product Description with Image -->
       <section id="product-detail" class="product-detail d-flex align-items-center">
         <div class="container">
-          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+          <div class="row p-4 p-lg-5 align-items-start justify-content-center">
 
               <div class="col-lg-12">
                 <h2 class="product-title">Natural Coconut Flakes</h2>
@@ -274,7 +274,7 @@
       <!-- Section 3: Product Features -->
       <section id="product-features" class="product-features d-flex align-items-center">
         <div class="container">
-          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+          <div class="row p-4 p-lg-5 align-items-start justify-content-center">
             <div class="col-lg-12">
               <h2 class="product-title text-center">Benefit</h2>
             </div>
